--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 MONGO_URI=mongodb://localhost:27017/crm-panel
+BOT_URI=your-bot-uri-here
 PORT=3000
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
